<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="glide_notification_description">The Glide repository</string>
    <string name="udacity_notification_description">The Project 3 repository</string>
    <string name="retrofit_notification_description">The Retrofit repository</string>
    <string name="notification_description">%s is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_description">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_description">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="logo_description">logo</string>
    <string name="download">Download</string>
    <string name="check_status">Check file status</string>
    <string name="filename">Filename:</string>
    <string name="status">Status</string>
    <string name="download_failure">%s failed to download</string>
    <string name="download_cancelled">The download was cancelled</string>
</resources>
