<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/fullmargin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/logo_description"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_cloud_download_24"
        app:layout_constraintBottom_toTopOf="@+id/choices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:srcCompat="@drawable/ic_baseline_cloud_download_24" />


    <RadioGroup
        android:id="@+id/choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fullmargin"
        android:layout_marginEnd="@dimen/fullmargin"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <RadioButton
            android:id="@+id/radioGlide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/glide_description" />

        <RadioButton
            android:id="@+id/radioLoadApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/loadapp_description" />

        <RadioButton
            android:id="@+id/radioRetrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/retrofit_description" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/fullmargin"
        android:layout_marginEnd="@dimen/fullmargin"
        android:layout_marginBottom="@dimen/fullmargin"
        app:backgroundColor="@color/colorPrimary"
        app:circleColor="@color/colorAccent"
        app:foregroundColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choices"
        app:text="@string/button_name"
        app:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>